--- a/video-player/index.html
+++ b/video-player/index.html
@@ -1,114 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="css/global.css" />
-		<title>Video player</title>
-	</head>
-	<body>
-		<div class="video-player paused theater">
-			<div class="video-player__controls controls">
-				<div class="controls__timeline"></div>
-				<div class="controls__actions">
-					<button class="controls__play-pause btn">
-						<svg
-							width="30"
-							height="30"
-							class="play-icon"
-							viewBox="0 0 24 24"
-							fill="none"
-							xmlns="http://www.w3.org/2000/svg"
-						>
-							<path
-								fill-rule="evenodd"
-								clip-rule="evenodd"
-								d="M12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21ZM12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23Z"
-								fill="black"
-							/>
-							<path d="M16 12L10 16.3301V7.66987L16 12Z" fill="black" />
-						</svg>
-						<svg
-							width="30"
-							height="30"
-							viewBox="0 0 24 24"
-							fill="none"
-							class="pause-icon"
-							xmlns="http://www.w3.org/2000/svg"
-						>
-							<path d="M9 9H11V15H9V9Z" fill="black" />
-							<path d="M15 15H13V9H15V15Z" fill="black" />
-							<path
-								fill-rule="evenodd"
-								clip-rule="evenodd"
-								d="M23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12ZM21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z"
-								fill="black"
-							/>
-						</svg>
-					</button>
-					<button class="btn controls__full-screen">
-						<svg
-							width="24"
-							height="24"
-							viewBox="0 0 24 24"
-							fill="none"
-							xmlns="http://www.w3.org/2000/svg"
-						>
-							<path d="M4 6V12H6V8L10 8V6H4Z" fill="black" />
-							<path d="M20 18H14V16H18V12H20V18Z" fill="black" />
-							<path
-								fill-rule="evenodd"
-								clip-rule="evenodd"
-								d="M4 2C1.79086 2 0 3.79086 0 6V18C0 20.2091 1.79086 22 4 22H20C22.2091 22 24 20.2091 24 18V6C24 3.79086 22.2091 2 20 2H4ZM20 4H4C2.89543 4 2 4.89543 2 6V18C2 19.1046 2.89543 20 4 20H20C21.1046 20 22 19.1046 22 18V6C22 4.89543 21.1046 4 20 4Z"
-								fill="black"
-							/>
-						</svg>
-					</button>
-					<button class="btn controls__theater">
-						<svg
-							width="24"
-							height="24"
-							viewBox="0 0 24 24"
-							fill="none"
-							xmlns="http://www.w3.org/2000/svg"
-						>
-							<path d="M4 6V12H6V8L10 8V6H4Z" fill="black" />
-							<path d="M20 18H14V16H18V12H20V18Z" fill="black" />
-							<path
-								fill-rule="evenodd"
-								clip-rule="evenodd"
-								d="M4 2C1.79086 2 0 3.79086 0 6V18C0 20.2091 1.79086 22 4 22H20C22.2091 22 24 20.2091 24 18V6C24 3.79086 22.2091 2 20 2H4ZM20 4H4C2.89543 4 2 4.89543 2 6V18C2 19.1046 2.89543 20 4 20H20C21.1046 20 22 19.1046 22 18V6C22 4.89543 21.1046 4 20 4Z"
-								fill="black"
-							/>
-						</svg>
-					</button>
-					<button class="btn controls__mini-player">
-						<svg
-							width="24"
-							height="24"
-							viewBox="0 0 24 24"
-							fill="none"
-							xmlns="http://www.w3.org/2000/svg"
-						>
-							<path d="M4 6V12H6V8L10 8V6H4Z" fill="black" />
-							<path d="M20 18H14V16H18V12H20V18Z" fill="black" />
-							<path
-								fill-rule="evenodd"
-								clip-rule="evenodd"
-								d="M4 2C1.79086 2 0 3.79086 0 6V18C0 20.2091 1.79086 22 4 22H20C22.2091 22 24 20.2091 24 18V6C24 3.79086 22.2091 2 20 2H4ZM20 4H4C2.89543 4 2 4.89543 2 6V18C2 19.1046 2.89543 20 4 20H20C21.1046 20 22 19.1046 22 18V6C22 4.89543 21.1046 4 20 4Z"
-								fill="black"
-							/>
-						</svg>
-					</button>
-				</div>
-			</div>
-			<video
-				src="./assets/big_buck_bunny_720p_surround.mp4"
-				id="video"
-				class="video-player__video"
-			></video>
-		</div>
-		<script type="module" src="js/index.js"></script>
-	</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="css/global.css" />
+        <title>Video player</title>
+    </head>
+    <body>
+        <div class="video-player paused">
+            <div class="video-player__controls controls">
+                <div class="controls__timeline"></div>
+                <div class="controls__actions">
+                    <button class="controls__play-pause btn">
+                        <svg
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            class="play-icon"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path
+                                d="M9.73666 16.1317L10.1839 17.0261L9.73666 16.1317ZM10.1839 6.9739L16.6584 10.2111L15.7639 12L9.28944 8.76276L10.1839 6.9739ZM16.6584 13.7889L10.1839 17.0261L9.28944 15.2372L15.7639 12L16.6584 13.7889ZM9 8.94164V15.0584H7V8.94164H9ZM10.1839 17.0261C8.72109 17.7575 7 16.6938 7 15.0584H9C9 15.207 9.15646 15.3037 9.28944 15.2372L10.1839 17.0261ZM16.6584 10.2111C18.1325 10.9482 18.1325 13.0518 16.6584 13.7889L15.7639 12L15.7639 12L16.6584 10.2111ZM9.28944 8.76276C9.15646 8.69627 9 8.79296 9 8.94164H7C7 7.3062 8.72109 6.24251 10.1839 6.9739L9.28944 8.76276Z"
+                                fill="white"
+                            />
+                        </svg>
+
+                        <svg
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            class="pause-icon"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <rect
+                                x="6"
+                                y="5"
+                                width="4"
+                                height="14"
+                                rx="1"
+                                stroke="white"
+                                stroke-width="2"
+                                stroke-linecap="round"
+                            />
+                            <rect
+                                x="14"
+                                y="5"
+                                width="4"
+                                height="14"
+                                rx="1"
+                                stroke="white"
+                                stroke-width="2"
+                                stroke-linecap="round"
+                            />
+                        </svg>
+                    </button>
+                    <button class="btn controls__full-screen">
+                        <svg
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            class="full-icon"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path
+                                d="M20 20V21H21V20H20ZM15.7071 14.2929C15.3166 13.9024 14.6834 13.9024 14.2929 14.2929C13.9024 14.6834 13.9024 15.3166 14.2929 15.7071L15.7071 14.2929ZM19 14V20H21V14H19ZM20 19H14V21H20V19ZM20.7071 19.2929L15.7071 14.2929L14.2929 15.7071L19.2929 20.7071L20.7071 19.2929Z"
+                                fill="#CCD2E3"
+                            />
+                            <path
+                                d="M4 20H3V21H4V20ZM9.70711 15.7071C10.0976 15.3166 10.0976 14.6834 9.70711 14.2929C9.31658 13.9024 8.68342 13.9024 8.29289 14.2929L9.70711 15.7071ZM3 14V20H5V14H3ZM4 21H10V19H4V21ZM4.70711 20.7071L9.70711 15.7071L8.29289 14.2929L3.29289 19.2929L4.70711 20.7071Z"
+                                fill="#CCD2E3"
+                            />
+                            <path
+                                d="M20 4H21V3H20V4ZM14.2929 8.29289C13.9024 8.68342 13.9024 9.31658 14.2929 9.70711C14.6834 10.0976 15.3166 10.0976 15.7071 9.70711L14.2929 8.29289ZM21 10V4H19V10H21ZM20 3H14V5H20V3ZM19.2929 3.29289L14.2929 8.29289L15.7071 9.70711L20.7071 4.70711L19.2929 3.29289Z"
+                                fill="#CCD2E3"
+                            />
+                            <path
+                                d="M4 4V3H3V4H4ZM8.29289 9.70711C8.68342 10.0976 9.31658 10.0976 9.70711 9.70711C10.0976 9.31658 10.0976 8.68342 9.70711 8.29289L8.29289 9.70711ZM5 10V4H3V10H5ZM4 5H10V3H4V5ZM3.29289 4.70711L8.29289 9.70711L9.70711 8.29289L4.70711 3.29289L3.29289 4.70711Z"
+                                fill="#CCD2E3"
+                            />
+                        </svg>
+
+                        <svg
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            class="full-alt-icon"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path
+                                d="M15 15V14H14V15H15ZM20.2929 21.7071C20.6834 22.0976 21.3166 22.0976 21.7071 21.7071C22.0976 21.3166 22.0976 20.6834 21.7071 20.2929L20.2929 21.7071ZM15 9H14V10H15V9ZM21.7071 3.70711C22.0976 3.31658 22.0976 2.68342 21.7071 2.29289C21.3166 1.90237 20.6834 1.90237 20.2929 2.29289L21.7071 3.70711ZM9 15H10V14H9V15ZM2.29289 20.2929C1.90237 20.6834 1.90237 21.3166 2.29289 21.7071C2.68342 22.0976 3.31658 22.0976 3.70711 21.7071L2.29289 20.2929ZM9 9V10H10V9H9ZM3.70711 2.29289C3.31658 1.90237 2.68342 1.90237 2.29289 2.29289C1.90237 2.68342 1.90237 3.31658 2.29289 3.70711L3.70711 2.29289ZM16 20V15H14V20H16ZM15 16H20V14H15V16ZM14.2929 15.7071L20.2929 21.7071L21.7071 20.2929L15.7071 14.2929L14.2929 15.7071ZM14 4V9H16V4H14ZM15 10H20V8H15V10ZM15.7071 9.70711L21.7071 3.70711L20.2929 2.29289L14.2929 8.29289L15.7071 9.70711ZM10 20V15H8V20H10ZM9 14H4V16H9V14ZM8.29289 14.2929L2.29289 20.2929L3.70711 21.7071L9.70711 15.7071L8.29289 14.2929ZM8 4V9H10V4H8ZM9 8H4V10H9V8ZM9.70711 8.29289L3.70711 2.29289L2.29289 3.70711L8.29289 9.70711L9.70711 8.29289Z"
+                                fill="#CCD2E3"
+                            />
+                        </svg>
+                    </button>
+                    <button class="btn controls__theater">
+                        <svg
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            class="code-icon"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path
+                                d="M20 12L20.7809 11.3753L21.2806 12L20.7809 12.6247L20 12ZM16.7809 6.3753L20.7809 11.3753L19.2191 12.6247L15.2191 7.6247L16.7809 6.3753ZM20.7809 12.6247L16.7809 17.6247L15.2191 16.3753L19.2191 11.3753L20.7809 12.6247Z"
+                                fill="#CCD2E3"
+                            />
+                            <path
+                                d="M4 12L3.21913 11.3753L2.71938 12L3.21913 12.6247L4 12ZM7.21913 6.3753L3.21913 11.3753L4.78087 12.6247L8.78087 7.6247L7.21913 6.3753ZM3.21913 12.6247L7.21913 17.6247L8.78087 16.3753L4.78087 11.3753L3.21913 12.6247Z"
+                                fill="#CCD2E3"
+                            />
+                        </svg>
+                        <svg
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            class="remote-icon"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path
+                                d="M11 9L11.7809 8.37531L12.2806 9L11.7809 9.62469L11 9ZM7.78087 3.3753L11.7809 8.37531L10.2191 9.62469L6.21913 4.6247L7.78087 3.3753ZM11.7809 9.62469L7.78087 14.6247L6.21913 13.3753L10.2191 8.37531L11.7809 9.62469Z"
+                                fill="#CCD2E3"
+                            />
+                            <path
+                                d="M13 15L12.2191 14.3753L11.7194 15L12.2191 15.6247L13 15ZM16.2191 9.3753L12.2191 14.3753L13.7809 15.6247L17.7809 10.6247L16.2191 9.3753ZM12.2191 15.6247L16.2191 20.6247L17.7809 19.3753L13.7809 14.3753L12.2191 15.6247Z"
+                                fill="#CCD2E3"
+                            />
+                        </svg>
+                    </button>
+                    <button class="btn controls__mini-player">
+                        <svg
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            class="in-icon"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path
+                                d="M3 9V15C3 17.8284 3 19.2426 3.87868 20.1213C4.75736 21 6.17157 21 9 21H15C17.8284 21 19.2426 21 20.1213 20.1213C21 19.2426 21 17.8284 21 15V9C21 6.17157 21 4.75736 20.1213 3.87868C19.2426 3 17.8284 3 15 3H9"
+                                stroke="#CCD2E3"
+                                stroke-width="2"
+                                stroke-linecap="round"
+                            />
+                            <path
+                                d="M15 15V16H16V15H15ZM7.70711 6.29289C7.31658 5.90237 6.68342 5.90237 6.29289 6.29289C5.90237 6.68342 5.90237 7.31658 6.29289 7.70711L7.70711 6.29289ZM14 8V15H16V8H14ZM15 14H8V16H15V14ZM15.7071 14.2929L7.70711 6.29289L6.29289 7.70711L14.2929 15.7071L15.7071 14.2929Z"
+                                fill="#CCD2E3"
+                            />
+                        </svg>
+                        <svg
+                            width="24"
+                            height="24"
+                            class="out-icon"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path
+                                d="M3 3V2H2V3H3ZM12.2929 13.7071C12.6834 14.0976 13.3166 14.0976 13.7071 13.7071C14.0976 13.3166 14.0976 12.6834 13.7071 12.2929L12.2929 13.7071ZM4 11V3H2V11H4ZM3 4H11V2H3V4ZM2.29289 3.70711L12.2929 13.7071L13.7071 12.2929L3.70711 2.29289L2.29289 3.70711Z"
+                                fill="#CCD2E3"
+                            />
+                            <path
+                                d="M4 15V15C4 16.8692 4 17.8038 4.40192 18.5C4.66523 18.9561 5.04394 19.3348 5.5 19.5981C6.19615 20 7.13077 20 9 20H14C16.8284 20 18.2426 20 19.1213 19.1213C20 18.2426 20 16.8284 20 14V9C20 7.13077 20 6.19615 19.5981 5.5C19.3348 5.04394 18.9561 4.66523 18.5 4.40192C17.8038 4 16.8692 4 15 4V4"
+                                stroke="#CCD2E3"
+                                stroke-width="2"
+                                stroke-linecap="round"
+                            />
+                        </svg>
+                    </button>
+                </div>
+            </div>
+            <video
+                src="./assets/big_buck_bunny_720p_surround.mp4"
+                id="video"
+                class="video-player__video"
+            ></video>
+        </div>
+        <script type="module" src="js/index.js"></script>
+    </body>
 </html>
